<?xml version="1.0"?>
<package format="2">
  <name>mavros_dvl_extras</name>
  <version>0.0.0</version>
  <description>The mavros_dvl_extras package</description>

  <maintainer email="nikhil.henry@plaksha.edu.in">Nikhil Henry</maintainer>
  <license>MIT</license>
  <author email="nikhil.henry@plaksha.edu.in">Nikhil Henry</author> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>mavros</build_export_depend>
  <build_export_depend>mavros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <export>
   <mavros plugin="${prefix}/mavros_plugins.xml"/>
  </export>
</package>
